--- a/styles/functions.scss
+++ b/styles/functions.scss
@@ -1,4 +1,5 @@
-@function toRem($value) {
-  $remValue: ($value / 16) + rem;
-  @return $remValue;
+@function to-rem($value) {
+  $rem-value: ($value / 16) + rem;
+
+  @return $rem-value;
 }
