--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -12,3 +12,9 @@ $color-purple-light: '#A452DA';
 $color-purple: '#7E29C2';
 $color-white: '#FFFFFF';
 $color-yellow: '#F9D722';
+
+// Icons size
+$icon-size-small: 26;
+$icon-size-medium: 30;
+$icon-size-large: 60;
+$icon-size-extra-large: 80;
