--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -3,7 +3,7 @@ $color-black: #1c1c1c;
 $color-brown: #873100;
 $color-gray-dark: #636363;
 $color-gray-light: #a9a9a9;
-$color-gray: #eeeeee;
+$color-gray: #808080;
 $color-orange-dark: #f39221;
 $color-orange: #f7b623;
 $color-pink: #e290ff;
@@ -14,11 +14,14 @@ $color-purple: #7e29c2;
 $color-white: #ffffff;
 $color-yellow: #f9d722;
 
+// Border
+$border-radius: to-rem(6);
+
 // Icon sizes
-$icon-size-extra-large: 80;
-$icon-size-large: 60;
-$icon-size-medium: 30;
-$icon-size-small: 26;
+$icon-size-extra-large: to-rem(80);
+$icon-size-large: to-rem(60);
+$icon-size-medium: to-rem(30);
+$icon-size-small: to-rem(26);
 
 // Fonts name
 $font-name-roboto: 'Roboto';
