--- a/styles/fonts.scss
+++ b/styles/fonts.scss
@@ -1,19 +1,19 @@
 @font-face {
-  font-family: 'Roboto';
+  font-family: Roboto;
   src: url(../public/fonts/Roboto/Roboto-Black.ttf) format('truetype');
   font-style: normal;
   font-weight: $font-weight-black;
 }
 
 @font-face {
-  font-family: 'Roboto';
+  font-family: Roboto;
   src: url(../public/fonts/Roboto/Roboto-Bold.ttf) format('truetype');
   font-style: normal;
   font-weight: $font-weight-bold;
 }
 
 @font-face {
-  font-family: 'Roboto';
+  font-family: Roboto;
   src: url(../public/fonts/Roboto/Roboto-Regular.ttf) format('truetype');
   font-style: normal;
   font-weight: $font-weight-regular;
