--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -36,25 +36,93 @@ $font-weight-regular: 400;
   font-family: $font-name-roboto;
   font-size: to-rem(22);
   font-weight: $font-weight-black;
+  line-height: to-rem(26);
+}
+
+// Keyframes
+@-webkit-keyframes keyframes-spin {
+  from {
+    transform: rotate(0);
+  }
+
+  to {
+    transform: rotate(-1turn);
+  }
+}
+@keyframes keyframes-spin {
+  from {
+    transform: rotate(0);
+  }
+
+  to {
+    transform: rotate(-1turn);
+  }
+}
+
+@-webkit-keyframes keyframes-push {
+  from {
+    transform: scale(1);
+  }
+
+  to {
+    transform: scale(0.8);
+  }
+}
+@keyframes keyframes-push {
+  from {
+    transform: scale(1);
+  }
+
+  to {
+    transform: scale(0.98);
+  }
+}
+
+@-webkit-keyframes keyframes-bounce {
+  0%,
+  100% {
+    transform: scale(1, 1);
+  }
+
+  25% {
+    transform: scale(0.9, 1.1);
+  }
+
+  50% {
+    transform: scale(1.1, 0.9);
+  }
+
+  75% {
+    transform: scale(0.95, 1.05);
+  }
+}
+
+@keyframes keyframes-bounce {
+  0%,
+  100% {
+    transform: scale(1, 1);
+  }
+
+  25% {
+    transform: scale(0.95, 1.05);
+  }
+
+  50% {
+    transform: scale(1.05, 0.95);
+  }
+
+  75% {
+    transform: scale(0.98, 1.02);
+  }
 }
 
 // Animations
-@-webkit-keyframes animation-spin {
-  from {
-    transform: rotate(0);
-  }
-
-  to {
-    transform: rotate(-1turn);
-  }
+@mixin animation-push {
+  -webkit-animation: keyframes-push 0.1s linear forwards;
+  animation: keyframes-push 0.1s linear forwards;
 }
 
-@keyframes animation-spin {
-  from {
-    transform: rotate(0);
-  }
-
-  to {
-    transform: rotate(-1turn);
-  }
+@mixin animation-bounce {
+  -webkit-animation: keyframes-bounce 0.25s ease-out;
+  animation: keyframes-bounce 0.25s ease-out;
 }
