--- a/src/shared/Button/styles/Button.scss
+++ b/src/shared/Button/styles/Button.scss
@@ -95,6 +95,14 @@ $button-size-small: to-rem(46);
     }
   }
 
+  .button-content,
+  .button-content-text {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
   .button-content-text,
   .button-content > .icon {
     margin-right: to-rem(8);
