--- a/styles/index.scss
+++ b/styles/index.scss
@@ -9,3 +9,7 @@
 @import '~@shared/Button/styles/Button';
 @import '~@shared/Icon/styles/Icon';
 @import '~@shared/Icon/styles/IconLoader';
+@import '~@shared/Field/styles/FieldStructure/FieldContainer';
+@import '~@shared/Field/styles/FieldStructure/FieldError';
+@import '~@shared/Field/styles/FieldStructure/FieldLabel';
+@import '~@shared/Field/styles/Input';
