--- a/src/shared/Field/styles/FieldStructure/FieldContainer.scss
+++ b/src/shared/Field/styles/FieldStructure/FieldContainer.scss
@@ -1,4 +1,10 @@
 .field {
   display: flex;
   flex-direction: column;
+  width: 100%;
+
+  .field-content {
+    position: relative;
+    width: 100%;
+  }
 }
