--- a/src/shared/Button/styles/Button.scss
+++ b/src/shared/Button/styles/Button.scss
@@ -1,6 +1,7 @@
 $inset-shadow: to-rem(4);
-$button-size-medium: to-rem(60);
-$button-size-small: to-rem(46);
+$button-size-large: to-rem(60);
+$button-size-medium: to-rem(46);
+$button-size-small: to-rem(30);
 
 .button {
   @include font-label;
@@ -9,6 +10,8 @@ $button-size-small: to-rem(46);
   -webkit-appearance: none;
   align-items: center;
   appearance: none;
+  background-color: $color-transparent;
+  border-color: $color-transparent;
   border-radius: $border-radius;
   border-style: solid;
   border-width: to-rem(2);
@@ -17,36 +20,71 @@ $button-size-small: to-rem(46);
   flex-direction: row;
   justify-content: center;
   outline: none;
+  overflow: hidden;
   position: relative;
-  text-transform: uppercase;
+  white-space: nowrap;
 
-  &.has-content {
+  &.has-text {
     padding: 0 to-rem(30);
+  }
+
+  &.large {
+    height: $button-size-large;
+    max-height: $button-size-large;
+    min-width: $button-size-large;
+
+    &:not(.has-text) {
+      max-width: $button-size-large;
+    }
   }
 
   &.medium {
     height: $button-size-medium;
     max-height: $button-size-medium;
     min-width: $button-size-medium;
+
+    &:not(.has-text) {
+      max-width: $button-size-medium;
+    }
   }
 
   &.small {
     height: $button-size-small;
     max-height: $button-size-small;
     min-width: $button-size-small;
+
+    &:not(.has-text) {
+      max-width: $button-size-small;
+    }
   }
 
-  &::before {
-    background-color: $color-white;
-    content: '';
-    height: 50%;
-    left: 0;
-    opacity: 0.1;
-    pointer-events: none;
-    position: absolute;
-    top: 0;
-    width: 100%;
-    border-radius: 0 0 $border-radius $border-radius;
+  &:not(.none) {
+    &::before {
+      background-color: $color-white;
+      content: '';
+      height: 50%;
+      left: 0;
+      opacity: 0.1;
+      pointer-events: none;
+      position: absolute;
+      top: 0;
+      width: 100%;
+      border-radius: $border-radius;
+    }
+
+    &::after {
+      background: radial-gradient($color-white, $color-transparent);
+      border-radius: 50%;
+      content: '';
+      height: to-rem(4);
+      left: to-rem(4);
+      position: absolute;
+      top: to-rem(4);
+      transform: translate(-50%, -50%) rotate(-20deg);
+      pointer-events: none;
+      width: to-rem(6);
+      filter: blur(to-rem(0.5));
+    }
   }
 
   &.primary {
