--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -1,3 +1,42 @@
+// Text styles
+@mixin font-label {
+  font-size: to-rem(22);
+  font-weight: $font-weight-black;
+  line-height: to-rem(26);
+  text-transform: uppercase;
+}
+
+@mixin font-label-small {
+  font-size: to-rem(18);
+  font-weight: $font-weight-black;
+  line-height: to-rem(22);
+  text-transform: uppercase;
+}
+
+@mixin font-text {
+  font-size: to-rem(18);
+  font-weight: $font-weight-regular;
+  line-height: to-rem(22);
+}
+
+@mixin font-text-small {
+  font-size: to-rem(14);
+  font-weight: $font-weight-regular;
+  line-height: to-rem(16);
+}
+
+// Animations
+@mixin animation-push {
+  -webkit-animation: keyframes-push 0.1s linear forwards;
+  animation: keyframes-push 0.1s linear forwards;
+}
+
+@mixin animation-bounce {
+  -webkit-animation: keyframes-bounce 0.25s ease-out;
+  animation: keyframes-bounce 0.25s ease-out;
+}
+
+// Size
 @mixin fixed-size($size) {
   height: $size;
   max-height: $size;
