--- a/styles/index.scss
+++ b/styles/index.scss
@@ -11,6 +11,7 @@
 @import '~@shared/Field/styles/FieldStructure/FieldError';
 @import '~@shared/Field/styles/FieldStructure/FieldLabel';
 @import '~@shared/Field/styles/Input';
+@import '~@shared/Header/styles/Header';
 @import '~@shared/Icon/styles/Icon';
 @import '~@shared/Icon/styles/IconLoader';
 @import '~@shared/Title/styles/Title';
