💄 Add ellipsis in title

--- a/src/shared/Title/styles/Title.scss
+++ b/src/shared/Title/styles/Title.scss
@@ -12,6 +12,8 @@ $margin-icon-right: to-rem(10);
 
     .title {
       margin: 0;
+      overflow: hidden;
+      text-overflow: ellipsis;
       width: 100%;
 
       &.h1 {
