--- a/src/shared/Header/styles/Header.scss
+++ b/src/shared/Header/styles/Header.scss
@@ -9,19 +9,21 @@ $header-height-medium: to-rem(120);
   box-sizing: border-box;
   column-gap: to-rem(20);
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: 1fr minmax(auto, 60%) 1fr;
   overflow: hidden;
   width: 100%;
 
   &.small {
     height: $header-height-small;
     max-height: $header-height-small;
+    min-height: $header-height-small;
     padding: 0 to-rem(10);
   }
 
   &.medium {
     height: $header-height-medium;
     max-height: $header-height-medium;
+    min-height: $header-height-medium;
     padding: 0 to-rem(40);
   }
 
