--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -25,10 +25,10 @@ $color-gradient-linear: linear-gradient(
   $color-purple-dark;
 
 // Breakpoints
-$breakpoint-xs: 480px;
-$breakpoint-sm: 768px;
-$breakpoint-md: 1024px;
-$breakpoint-lg: 1300px;
+$breakpoint-large: 1300px;
+$breakpoint-medium: 1024px;
+$breakpoint-small: 768px;
+$breakpoint-extra-small: 480px;
 
 // Border
 $border-radius: to-rem(6);
