--- a/src/shared/Modal/styles/Modal.scss
+++ b/src/shared/Modal/styles/Modal.scss
@@ -1,14 +1,13 @@
 .modal {
   background-color: $color-purple-dark;
-  display: none;
+  display: flex;
+  flex-direction: column;
   overflow: hidden;
   pointer-events: none;
-  position: absolute;
+  position: fixed;
   z-index: 500;
 
   &.is-visible {
-    display: flex;
-    flex-direction: column;
     pointer-events: visible;
   }
 
@@ -16,11 +15,20 @@
     border-radius: $border-radius;
     box-shadow: 0 to-rem(4) $color-black;
     left: 50%;
-    max-height: (90vw);
+    max-height: 90vh;
     max-width: to-rem(700);
+    opacity: 0;
     top: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(0.4);
+    transition-duration: 0.2s;
+    transition-property: height, opacity, transform;
+    transition-timing-function: ease-in-out;
     width: 90vw;
+
+    &.is-visible {
+      opacity: 1;
+      transform: translate(-50%, -50%) scale(1);
+    }
 
     @include bp-tablet {
       width: 80vw;
@@ -29,7 +37,16 @@
 
   .modal-content {
     overflow-y: auto;
-    padding: to-rem(60);
+    padding: to-rem(20);
+    word-break: break-word;
+
+    @include bp-phablet {
+      padding: to-rem(40);
+    }
+
+    @include bp-desktop {
+      padding: to-rem(60);
+    }
   }
 
   .modal-header .title-container .title-content .title {
