--- a/src/shared/Header/styles/Header.scss
+++ b/src/shared/Header/styles/Header.scss
@@ -7,11 +7,16 @@ $header-height-medium: to-rem(120);
   box-shadow: inset 0 to-rem(-4) rgba($color-white, 0.1),
     0 to-rem(4) to-rem(10) rgba($color-black, 0.3);
   box-sizing: border-box;
-  column-gap: to-rem(20);
+  column-gap: to-rem(10);
   display: grid;
-  grid-template-columns: 1fr minmax(auto, 60%) 1fr;
+  grid-template-columns: 1fr minmax(auto, 40%) 1fr;
   overflow: hidden;
   width: 100%;
+
+  @include bp-phablet {
+    column-gap: to-rem(20);
+    grid-template-columns: 1fr minmax(auto, 60%) 1fr;
+  }
 
   &.small {
     height: $header-height-small;
