--- a/src/shared/Modal/styles/Modal.scss
+++ b/src/shared/Modal/styles/Modal.scss
@@ -35,6 +35,32 @@
     }
   }
 
+  &.rightSide {
+    height: 100vh;
+    max-width: to-rem(700);
+    right: 0;
+    top: 0;
+    transform: translateX(100%);
+    transition: transform 0.2s ease-in-out;
+    width: 100vw;
+
+    @include bp-phablet {
+      width: 90vw;
+    }
+
+    @include bp-tablet {
+      width: 70vw;
+    }
+
+    @include bp-desktop {
+      width: 60vw;
+    }
+
+    &.is-visible {
+      transform: translateX(0);
+    }
+  }
+
   .modal-content {
     overflow-y: auto;
     padding: to-rem(20);
