--- a/src/shared/Button/styles/Button.scss
+++ b/src/shared/Button/styles/Button.scss
@@ -60,16 +60,7 @@ $button-size-small: to-rem(30);
 
   &:not(.none) {
     &::before {
-      background-color: $color-white;
-      content: '';
-      height: 50%;
-      left: 0;
-      opacity: 0.1;
-      pointer-events: none;
-      position: absolute;
-      top: 0;
-      width: 100%;
-      border-radius: $border-radius;
+      @include light-reflection;
     }
 
     &::after {
