--- a/styles/index.scss
+++ b/styles/index.scss
@@ -15,6 +15,7 @@
 @import '~@shared/Icon/styles/Icon';
 @import '~@shared/Icon/styles/IconLoader';
 @import '~@shared/Image/styles/Image';
+@import '~@shared/Level/styles/Level';
 @import '~@shared/Modal/styles/BehindOverlay';
 @import '~@shared/Modal/styles/Modal';
 @import '~@shared/Title/styles/Title';
