--- a/styles/index.scss
+++ b/styles/index.scss
@@ -14,6 +14,7 @@
 @import '~@shared/Header/styles/Header';
 @import '~@shared/Icon/styles/Icon';
 @import '~@shared/Icon/styles/IconLoader';
+@import '~@shared/Image/styles/Image';
 @import '~@shared/Modal/styles/BehindOverlay';
 @import '~@shared/Modal/styles/Modal';
 @import '~@shared/Title/styles/Title';
