--- a/styles/index.scss
+++ b/styles/index.scss
@@ -18,4 +18,5 @@
 @import '~@shared/Level/styles/Level';
 @import '~@shared/Modal/styles/BehindOverlay';
 @import '~@shared/Modal/styles/Modal';
+@import '~@shared/TextContainer/styles/TextContainer';
 @import '~@shared/Title/styles/Title';
