--- a/src/shared/TextContainer/styles/TextContainer.scss
+++ b/src/shared/TextContainer/styles/TextContainer.scss
@@ -1,17 +1,19 @@
 .text-container {
+  @include fixed-size(initial, to-rem(60));
+
   align-items: center;
   background-color: $color-purple-dark-2;
   border-radius: $border-radius;
   display: flex;
-  justify-content: center;
+  margin: 0;
   min-width: to-rem(100);
   padding: 0 to-rem(20);
 
-  &.text-container-height-small {
-    @include fixed-size(initial, to-rem(46));
-  }
+  .text-container-value {
+    @include font-text;
 
-  &.text-container-height-medium {
-    @include fixed-size(initial, to-rem(60));
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 }
