--- a/styles/index.scss
+++ b/styles/index.scss
@@ -20,3 +20,4 @@
 @import '~@shared/Modal/styles/Modal';
 @import '~@shared/TextContainer/styles/TextContainer';
 @import '~@shared/Title/styles/Title';
+@import '~@shared/UserCard/styles/UserCard';
