--- a/styles/index.scss
+++ b/styles/index.scss
@@ -6,6 +6,7 @@
 @import 'global';
 
 // Shared styles
+@import '~@shared/BlockContainer/styles/BlockContainer';
 @import '~@shared/Button/styles/Button';
 @import '~@shared/Field/styles/FieldStructure/FieldContainer';
 @import '~@shared/Field/styles/FieldStructure/FieldError';
