--- a/styles/index.scss
+++ b/styles/index.scss
@@ -5,6 +5,9 @@
 @import 'fonts';
 @import 'global';
 
+// Page
+@import '~@home/styles/HomePage';
+
 // Shared styles
 @import '~@shared/BlockContainer/styles/BlockContainer';
 @import '~@shared/Button/styles/Button';
